--- a/style.css
+++ b/style.css
@@ -1,19 +1,18 @@
 body {
-  font-family: Arial, sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
   background: #cce7ff;
   display: flex;
   justify-content: center;
-  align-items: center;
   height: 100vh;
-  margin: 0;
+
 }
 
-.container {
-  text-align: center;
-  background: white;
-  padding: 2rem;
-  border-radius: 10px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+.container{
+    text-align: center;
+    background: green;
+    padding: 2rem;
+    border-radius: 20px;
+    box-shadow: 0 0 10;
 }
 
 input, button {
